test-grammar
test-suite:
 test
 test-suite test

test:
  start-directive requirement-list end-directive

requirement-list:
  requirement
  requirement-list requirement

requirement:
  direct-directive requirement-content-opt newline

requirement-content: text

start-directive: directive
end-directive: directive

directive:
    direct-directive
    direct-directive lparen directive-argument-opt rparen newline

directive-argument: string

name: [a-zA-Z_][a-zA-Z0-9_]*

text: .*

string: '"' [any character except '"' and '\n']* '"'
